--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,16 @@
     <title>Folarin Ogungbemi |{% block extra_title %} Portfolio Website {% endblock %}</title>
 </head>
 <body>
+    <!--Top Navigation-->
+    <header class="container-fluid">
+        <nav id="top-nav" class="row py-3">
+            <div class="col-12 col-md-6 col-lg-6">
+                <a href="#" class="text-decoration-none logo">flucent</a>
+            </div>
+            <div class="col-12 col-md-6 col-lg-6"></div>
+        </nav>
+    </header>
+
     <main>
         {% block content %}
         {% endblock %}
