--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,10 @@
     <!--Top Navigation-->
     <header class="container-fluid">
         <nav id="top-nav" class="row py-3">
-            <div class="col-12 col-md-6 col-lg-6">
-                <a href="#" class="text-decoration-none logo">flucent</a>
+            <div class="col-8">
+                <a href="{% url 'home' %}" class="text-decoration-none logo">flucent</a>
             </div>
-            <div class="col-12 col-md-6 col-lg-6"></div>
+            <div class="col-4"></div>
         </nav>
     </header>
 
