--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,3 +51,22 @@
 .hamburger-btn .hamburger-icon.is-active:hover{
     transform: rotate(225deg);
 }
+
+.mobile-nav{
+    position: fixed;
+    top: 60px;
+    left: 100%;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    padding-top: 5px;
+    transition: all 0.4s;
+}
+
+.mobile-nav li{
+    padding: 5px;
+}
+
+.mobile-nav.is-active{
+    left: 40%;
+}
