Restructure navbar hamburger and style

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,11 +28,11 @@
 <body>
     <!--Top Navigation-->
     <header class="container-fluid">
-        <nav id="top-nav" class="row py-3">
-            <div class="col-8">
+        <nav id="top-nav" class="row py-3 mx-1">
+            <div class="col-7">
                 <a href="{% url 'home' %}" class="text-decoration-none logo">flucent</a>
             </div>
-            <div class="col-4"></div>
+            <div class="col-5 top-nav-list"></div>
         </nav>
     </header>
 
