--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,8 +1,39 @@
-#top-nav{
+header{
     background-color: black;
+}
+
+#top-nav{
+    min-height: 70px;
+    align-items: center;
     color: #fff;
 }
 
+#top-nav a.logo{
+    color: #fff;
+}
+
+.nav-list{
+    justify-content: space-between;
+    margin: auto;
+}
+
+.nav-list li{
+    margin: auto;
+}
+
+/* Resume button */
+.mobile-nav li:last-child,
+.nav-list li:last-child{
+  border: 1px solid yellow;
+  padding: 5px 15px;
+  border-radius: 5px;
+}
+
+.mobile-nav li:last-child{
+    margin-top: 1rem;
+}
+
+/* Hamburger button */
 .hamburger-btn{
     width: 37px;
     height: 37px;
@@ -19,7 +50,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0.4s ease;
+    transition: all 0.5s ease;
+    z-index: 2;
 }
 
 .hamburger-btn .hamburger-icon::after,
@@ -34,6 +66,42 @@
 
 .hamburger-btn .hamburger-icon::before{
     top: 10px;
+}
+
+/* Mobile Navigation */
+.top-nav-list > div{
+    position: fixed;
+    backdrop-filter: blur(2px);
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 100%;
+    z-index:1;
+    transition: left 0.5s ease;
+}
+
+.top-nav-list > div > div{
+    position: relative;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    z-index:1;
+    transition: left 0.5s ease;
+}
+
+.mobile-nav{
+    position: absolute;
+    width: 30%;
+    text-align: center;
+    left: 30%;
+    bottom: 60%;
+    transform: translate(-40%, 30%);
+}
+
+.mobile-nav li{
+    padding-bottom: 2rem;
 }
 
 /* Button active state effect */
@@ -52,21 +120,10 @@
     transform: rotate(225deg);
 }
 
-.mobile-nav{
-    position: fixed;
-    top: 60px;
-    left: 100%;
-    width: 100%;
-    height: 100vh;
-    background-color: black;
-    padding-top: 5px;
-    transition: all 0.4s;
+.top-nav-list > div.is-active{
+    left: 0;
 }
 
-.mobile-nav li{
-    padding: 5px;
-}
-
-.mobile-nav.is-active{
+.top-nav-list > div >div.is-active{
     left: 40%;
 }
