Add hero content and style

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,43 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/hero.css' %}">
+{% endblock %}
 
 {% block content %}
-    <h1>Hello there</h1>
+    <section id="hero" class="container-fluid">
+        {% include 'home/includes/hero.html' %}
+    </section>
+    <section id="about" class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2>About</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="projects" class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2>Project</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2>Contact</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+{% endblock %}
+{% block post_load_js %}
+    {{ block.super }}
+    <script src="{% static 'js/hero.js' %}"></script>
 {% endblock %}
