--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,16 @@
     {% block icon %}
     {% endblock %}
 
-    {% block corecss %}
+    {% block core_css %}
     <!--Bootstrap CSS CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
-    {% block corejs %}
+    {% block extra_css %}
+    {% endblock %}
+
+    {% block core_js %}
     <script src="{% static 'js/base.js' %}"></script>
     {% endblock %}
 
@@ -29,10 +32,10 @@
     <!--Top Navigation-->
     <header class="container-fluid">
         <nav id="top-nav" class="row py-3 mx-1">
-            <div class="col-7">
+            <div class="col-4">
                 <a href="{% url 'home' %}" class="text-decoration-none logo">flucent</a>
             </div>
-            <div class="col-5 top-nav-list"></div>
+            <div class="col-8 top-nav-list"></div>
         </nav>
     </header>
 
@@ -41,7 +44,7 @@
         {% endblock %}
     </main>
 
-    {% block postloadjs %}
+    {% block post_load_js %}
     <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/b30d404726.js" crossorigin="anonymous"></script>
     <!-- Bootstrap JS CDN-->
