Fix:Bug in navbar, hero button and social icons

--- a/home/templates/home/includes/hero.html
+++ b/home/templates/home/includes/hero.html
@@ -5,10 +5,10 @@
             <h1>Folarin Ogungbemi.<br><span class="goal">Full Stack software developer.</span></h1>
             <div class="row">
                 <div class="col-10 col-md-8">
-                    <p class="hero-text">I communicate efficiently with the web majorly through <a href="https://www.javascript.com/" class="underline-hover-effect">Javascript</a> and <a href="https://www.python.org" class="underline-hover-effect">Python</a> to design and build aesthetic websites that gives you an amazing digital experience.</p>
+                    <p class="hero-text">I communicate efficiently with the web majorly through <a href="https://www.javascript.com/" class="underline-hover-effect">Javascript</a> and <a href="https://www.python.org" class="underline-hover-effect">Python</a> to design and build aesthetic websites that exhibits an amazing digital experience.</p>
                 </div>
             </div>
-            <a href="#" class="btn btn-lg action-btn-hero mt-4">View my Projects</a>
+            <a href="#" class="btn btn-lg action-btn mt-4">View my Projects</a>
         </div>
     </div>
 </div>
