--- a/home/static/css/hero.css
+++ b/home/static/css/hero.css
@@ -23,12 +23,8 @@
     margin-bottom: 2.5rem;
 }
 
-.btn{
-    color: var(--f-col-light);
-}
-
-.action-btn,
-.action-btn-hero{
+/* Buttons */
+.action-btn{
     color: var(--f-col-grab) !important;
     border: 1.5px solid var(--f-col-grab);
     background: rgba(237, 89, 89, 0.2);
@@ -36,25 +32,17 @@
     font-weight: 500;
 }
 
-.action-btn{
-    width: fit-content;
-    padding: 2px 10px;
-}
-
 .action-btn:hover{
     color: var(--f-col-grab);
-    border: 1.5px solid var(--f-col-grab);
-    background: rgba(237, 89, 89, 0.4);
-}
-
-.action-btn-hero:hover{
     border: 1.5px solid var(--f-col-grab);
     background: rgba(237, 89, 89, 0.4);
     transition: var(--trans-ease);
 }
 
+/* Social icons style */
 .social-icons{
     margin: 4rem 0;
+    gap: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,6 +57,7 @@
     color: var(--f-col-grab);
 }
 
+/* Underline hover effect */
 .underline-hover-effect{
     color: var(--f-col-grab);
     position: relative;
@@ -84,7 +73,7 @@
     height: 1.5px;
     left: 0;
     bottom: 0;
-    transition: width  0.4s ease;
+    transition: var(--trans-ease);
 }
 
 .underline-hover-effect:hover::before{
