--- a/home/templates/home/includes/hero.html
+++ b/home/templates/home/includes/hero.html
@@ -1,7 +1,7 @@
 <div class="container hero-content">
     <div class="row">
         <div class="col-12">
-            <p class="hero-text mt-4">Hello, my name is</p>
+            <p class="hero-text">Hello, my name is</p>
             <h1>Folarin Ogungbemi.<br><span class="goal">Full Stack software developer.</span></h1>
             <div class="row">
                 <div class="col-10 col-md-8">
