fix:Bug in hero button

--- a/home/static/css/about.css
+++ b/home/static/css/about.css
@@ -63,17 +63,8 @@
     }
 }
 
-.about-text-body{
-    width: 70%;
-    margin: auto;
-    margin-top: 1rem;
-}
-
 .about-text{
     line-height: 1.5rem;
+    font-weight: 500;
     opacity: 0.85;
-}
-
-.highlight-color{
-    color: var(--f-col-grab);
 }
