--- a/home/static/css/hero.css
+++ b/home/static/css/hero.css
@@ -19,7 +19,7 @@
 }
 
 .hero-text{
-    font-weight: 400;
+    font-weight: 500;
     opacity: 0.85;
 }
 
@@ -49,9 +49,15 @@
     transition: var(--trans-ease);
 }
 
+.btn-hero{
+    padding: 15px 35px;
+    text-decoration: none;
+    font-size: 1.5rem;
+}
+
 /* Social icons style */
 .social-icons{
-    margin: 4rem 0;
+    margin-top: 4rem;
     gap: 3rem;
     display: flex;
     justify-content: center;
