--- a/home/templates/home/includes/hero.html
+++ b/home/templates/home/includes/hero.html
@@ -4,11 +4,11 @@
             <p class="hero-text">Hello, my name is</p>
             <h1>Folarin Ogungbemi.<br><span class="goal">Full Stack software developer.</span></h1>
             <div class="row">
-                <div class="col-10 col-md-8">
+                <div class="col-10 col-md-8 mb-5">
                     <p class="hero-text">I communicate efficiently with the web majorly through <a href="https://www.javascript.com/" class="underline-hover-effect">Javascript</a> and <a href="https://www.python.org" class="underline-hover-effect">Python</a> to design and build aesthetic websites that exhibits an amazing digital experience.</p>
                 </div>
             </div>
-            <a href="#" class="btn btn-lg action-btn mt-4">View my Projects</a>
+            <a href="#" class="action-btn btn-hero">View my Projects</a>
         </div>
     </div>
 </div>
