--- a/home/templates/home/includes/projects.html
+++ b/home/templates/home/includes/projects.html
@@ -1,5 +1,11 @@
 <div class="row">
     <div class="col-12">
         <h2 class="text-center section-header">Project</h2>
+        <div class="container projects d-none d-md-flex mt-5"></div>
+            <div class="row">
+                <div class="col-12 col-md-8 mx-auto mt-3">
+                    
+                </div>
+            </div>
     </div>
 </div>
