--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,6 +18,11 @@ body{
     color: #fff;
 }
 
+a{
+    text-decoration: none;
+    color: var(--f-col-light);
+}
+
 /* ----button---- */
 .action-btn{
     color: var(--f-col-grab) !important;
