--- a/home/templates/home/includes/projects.html
+++ b/home/templates/home/includes/projects.html
@@ -2,9 +2,6 @@
     <div class="col-12">
         <h2 class="text-center section-header">Project</h2>
         <div class="container projects d-none d-md-flex mt-5"></div>
-            <div class="row">
-                <div class="col-8 project-display mx-auto mt-3">
-                </div>
-            </div>
+        <div class="row project-display"></div>
     </div>
 </div>
