--- a/home/templates/home/includes/projects.html
+++ b/home/templates/home/includes/projects.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12">
         <h2 class="text-center section-header">Project</h2>
-        <div class="container projects d-none d-md-flex mt-5"></div>
+        <div class="container projects mt-5"></div>
         <div class="row project-display"></div>
     </div>
 </div>
