--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12">
             <h2 class="text-center section-header">About</h2>
-            <div class="container technical-skills d-none d-md-grid mt-5"></div>
+            <div class="container technical-skills mt-5"></div>
             <div class="row">
                 <div class="col-12 col-md-8 mx-auto mt-3">
                     <p>Hello! My name is Folarin Ogungbemi, an aspiring full-stack software developer skilled in building websites from its Design to Deployment. My interest in software development started as a result of my curiosity for technologies and the burden it wards off in our current world.</p>
