--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,6 +23,13 @@ a{
     color: var(--f-col-light);
 }
 
+.page-center{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* ----button---- */
 .action-btn{
     color: var(--f-col-grab) !important;
