--- a/home/templates/home/includes/hero.html
+++ b/home/templates/home/includes/hero.html
@@ -1,4 +1,4 @@
-<div class="container hero-content">
+<div class="container hero-content page-center">
     <div class="row">
         <div class="col-12">
             <p>Hello, my name is</p>
