--- a/home/templates/home/includes/projects.html
+++ b/home/templates/home/includes/projects.html
@@ -1,7 +1,9 @@
-<div class="row">
-    <div class="col-12">
-        <h2 class="text-center section-header">Project</h2>
-        <div class="container projects mt-5"></div>
-        <div class="row project-display"></div>
+<div class="container projects-content page-center">
+    <div class="row">
+        <div class="col-12">
+            <h2 class="text-center section-header">Project</h2>
+            <div class="container projects mt-5"></div>
+            <div class="row project-display"></div>
+        </div>
     </div>
 </div>
