Create contact model

--- a/home/templates/home/includes/contact.html
+++ b/home/templates/home/includes/contact.html
@@ -1,4 +1,4 @@
-<div class="container contact-content page-content">
+<div class="container contact-content page-center">
     <div class="row">
         <div class="col-12">
             <h2 class="text-center section-header">Get in touch</h2>
