--- a/home/templates/home/includes/contact.html
+++ b/home/templates/home/includes/contact.html
@@ -19,7 +19,17 @@
                     <div class="contact-form mb-5">
                         <form method="POST" action="{% url 'home' %}">
                             {% csrf_token %}
-                            {{ form | crispy }}
+                            <div class="row">
+                                <div class="col-6">
+                                    {{ form.full_name | as_crispy_field }}
+                                </div>
+                                <div class="col-6">
+                                    {{ form.email | as_crispy_field }}
+                                </div>
+                                <div class="col-12">
+                                    {{ form.content | as_crispy_field }}
+                                </div>
+                            </div>
                             <div class="d-flex justify-content-center my-2">
                                 <button class="action-btn" type="submit">Submit</button>
                             </div>
