refactor social links script

--- a/home/templates/home/includes/hero.html
+++ b/home/templates/home/includes/hero.html
@@ -9,6 +9,7 @@
                 </div>
             </div>
             <a href="#" class="action-btn btn-hero">View my Projects</a>
+            <div class="hero-social-links"></div>
         </div>
     </div>
 </div>
