--- a/static/css/base.css
+++ b/static/css/base.css
@@ -48,10 +48,37 @@ a{
     transition: var(--trans-ease);
 }
 
-/* ----list elements---- */
-.social-icons a:hover,
-.nav-list a:hover{
-    color: var(--f-col-grab);
+/* Social Links */
+.social-icons{
+    display: flex;
+    gap: 1rem;
+}
+
+.social-icons .social-icon {
+    position: relative;
+    height: 3.5rem;
+    width: 3.5rem;
+    background: rgba(237, 89, 89, 0.4);
+    border-radius: 100%;
+    font-size: 1.5rem;
+}
+
+.social-icons .social-icon a{
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    width: fit-content;
+    height: fit-content;
+    background: transparent;
+}
+
+.social-icon{
+    color: var(--f-col-light);
+}
+
+.nav-list a:hover,
+.social-icons .social-icon:hover {
+    background-color: var(--f-col-grab);
     transition: var(--trans-ease);
 }
 
