Fix: Bug in navlist a style

--- a/home/static/css/hero.css
+++ b/home/static/css/hero.css
@@ -27,7 +27,7 @@
 }
 
 /* Hero Social icons style */
-#hero .social-icons{
+.hero-social-links .social-icons{
     margin-top: 4rem;
     gap: 3rem;
     display: flex;
