Add footer element and back to top

--- a/home/templates/home/includes/contact.html
+++ b/home/templates/home/includes/contact.html
@@ -9,7 +9,7 @@
                         <div>
                             <p><i class="fa-solid fa-location-dot me-2"></i>Berlin, Germany</p>
                             <p><i class="fa-solid fa-phone me-2"></i>(49) 17682052388</p>
-                            <p><a href="mailto:ftogungbemi@gmail.com" class="underline-hover-effect"><i class="fa-solid fa-envelope me-2"></i>ftogungbemi@gmail.com</a></p>
+                            <p><a href="mailto:ftogungbemi@gmail.com"><i class="fa-solid fa-envelope me-2"></i><span class="underline-hover-effect">ftogungbemi@gmail.com</span></a></p>
                             <!--social links-->
                         </div>
                     </div>
