--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,6 +21,8 @@
     </section>
     <section id="contact" class="container-fluid">
         {% include 'home/includes/contact.html' %}
+        <!--Back to Top-->
+        <a href="#hero" class="back-to-top d-flex justify-content-end"><i class="fa-solid fa-arrow-up"></i></a>
     </section>
 {% endblock %}
 {% block post_load_js %}
