--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,16 @@
         {% endblock %}
     </main>
 
+    <footer class="d-flex justify-content-center p-2">
+        <a href="https://github.com/folarin-ogungbemi"
+          target="_blank"
+          rel="noopener"
+          aria-label="visit folarin's github page(open in a new tab)"
+          class="nav-link d-inline"><small>&copy; 2023 Folarin Ogungbemi</small>
+          <i class="fa-brands fa-github-alt ms-1"></i>
+        </a>
+    </footer>
+
     {% block post_load_js %}
     <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/b30d404726.js" crossorigin="anonymous"></script>
