Add style to back-to-top

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,7 +22,7 @@
     <section id="contact" class="container-fluid">
         {% include 'home/includes/contact.html' %}
         <!--Back to Top-->
-        <a href="#hero" class="back-to-top d-flex justify-content-end"><i class="fa-solid fa-arrow-up"></i></a>
+        <a href="#hero" class="back-to-top"><i class="fa-solid fa-arrow-up"></i></a>
     </section>
 {% endblock %}
 {% block post_load_js %}
