--- a/home/static/css/contact.css
+++ b/home/static/css/contact.css
@@ -19,3 +19,20 @@
     color: var(--f-col-grab);
     padding-left: 0.2rem;
 }
+
+.back-to-top{
+    border-radius: 5px;
+    width: fit-content;
+    padding: 1rem;
+    margin: 0.2rem;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(237, 89, 89, 0.5);
+}
+
+.back-to-top:hover{
+    background: var(--f-col-grab);
+    transition: var(--trans-ease);
+}
