--- a/templates/base.html
+++ b/templates/base.html
@@ -49,8 +49,7 @@
           target="_blank"
           rel="noopener"
           aria-label="visit folarin's github page(open in a new tab)"
-          class="nav-link d-inline"><small>&copy; 2023 Folarin Ogungbemi</small>
-          <i class="fa-brands fa-github-alt ms-1"></i>
+          class="nav-link d-inline"><small class="footer-nav">&copy; 2023 Folarin Ogungbemi <i class="fa-brands fa-github-alt ms-1"></i></small>
         </a>
     </footer>
 
