Link projects to hero button and style

--- a/home/static/css/hero.css
+++ b/home/static/css/hero.css
@@ -21,9 +21,9 @@
 
 /* Buttons */
 .btn-hero{
-    padding: 15px 35px;
+    padding: 1em 2em;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 /* Hero Social icons style */
