--- a/home/templates/home/includes/hero.html
+++ b/home/templates/home/includes/hero.html
@@ -8,7 +8,7 @@
                     <p class="hero-text">I communicate efficiently with the web majorly through <a href="https://www.javascript.com/" class="underline-hover-effect">Javascript</a> and <a href="https://www.python.org" class="underline-hover-effect">Python</a> to design and build aesthetic websites that exhibits an amazing digital experience.</p>
                 </div>
             </div>
-            <a href="#" class="action-btn btn-hero">View my Projects</a>
+            <a href="#projects" class="action-btn btn-hero">View my Projects</a>
             <div class="hero-social-links"></div>
         </div>
     </div>
