Add skill information feature to project

--- a/home/templates/home/includes/projects.html
+++ b/home/templates/home/includes/projects.html
@@ -4,6 +4,7 @@
             <h2 class="text-center section-header">Project</h2>
             <div class="container projects mt-5"></div>
             <div class="row project-display"></div>
+            <ul class="project-skill mt-5 list-unstyled"></ul>
         </div>
     </div>
 </div>
