--- a/home/static/css/projects.css
+++ b/home/static/css/projects.css
@@ -87,6 +87,9 @@
 
 .language{
     opacity: 0.7;
+    position: relative;
+    width: fit-content;
+    padding-left: 0.5rem;
 }
 
 
@@ -103,4 +106,34 @@
     .language{
         font-size: 1rem;
     }
+}
+
+.skill-info{
+    width: 66%;
+    margin:auto;
+    padding: 0;
+}
+
+.project-tech{
+    display: flex;
+    flex-flow: row;
+    justify-content: flex-start;
+    position: relative;
+    width: fit-content;
+    padding-left: 0.8rem;
+}
+
+.language::before,
+.project-tech::before{
+    content: '';
+    height: 5px;
+    width: 5px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    background-color: var(--f-col-grab);
+    
+    /* https://www.cssportal.com/css-clip-path-generator/ */
+    -webkit-clip-path: polygon(0 0, 100% 50%, 3% 98%, 0% 100%, 25% 50%, 0% 0%);
+    clip-path: polygon(0 0, 100% 50%, 3% 98%, 0% 100%, 25% 50%, 0% 0%);
 }
