Add timing effect to message

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -231,6 +231,15 @@ header{
 
 /* contact message */
 
+.message.active{
+    display: none;
+}
+
+.message{
+    display: flex;
+    margin: auto;
+}
+
 .contact-message{
     background-color: rgba(10, 3, 26, 0.2);
     width: fit-content;
