center section with min-height

--- a/home/templates/home/includes/about.html
+++ b/home/templates/home/includes/about.html
@@ -1,4 +1,4 @@
-<div class="container about-content page-center">
+<div class="container about-content section-center">
     <div class="row">
         <div class="col-12">
             <h2 class="text-center section-header">About</h2>
