--- a/home/templates/home/includes/projects.html
+++ b/home/templates/home/includes/projects.html
@@ -1,10 +1,10 @@
-<div class="container projects-content page-center">
+<div class="container projects-content section-center">
     <div class="row">
         <div class="col-12">
             <h2 class="text-center section-header">Project</h2>
             <div class="container projects mt-5"></div>
             <div class="row project-display"></div>
-            <ul class="project-skill mt-5 list-unstyled"></ul>
+            <ul class="project-skill mt-2 list-unstyled"></ul>
         </div>
     </div>
 </div>
