--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,12 +19,28 @@
 }
 
 body{
-    background-color: #0A031A;
-    color: #fff;
+    background-color: var(--f-col-dark);
+    color: var(--f-col-light);
     min-height: 100vh;
     margin: 0 auto;
     max-width: 1440px;
 }
+
+header{
+    max-width: 1440px;
+    z-index: 99999;
+}
+
+/* header.down-scroll-active{ */
+    /* display: none; */
+/* } */
+/*  */
+/* header.up-scroll-active{ */
+    /* display: block; */
+    /* min-height: 5vh; */
+    /* background-color: rgba(10, 3, 26, 0.7); */
+    /* backdrop-filter: blur(30px); */
+/* } */
 
 a{
     text-decoration: none;
@@ -92,14 +108,6 @@ a{
 .nav-list a:hover{
     color: var(--f-col-grab);
     transition: var(--trans-ease);
-}
-
-header{
-    position: fixed;
-    min-height: 5vh;
-    max-width: 1440px;
-    z-index: 99999;
-    background-color: var(--f-col-dark);
 }
 
 #top-nav{
@@ -250,4 +258,28 @@ header{
 
 .contact-message i{
     color: var(--f-col-grab);
+}
+
+
+::-webkit-scrollbar{
+    width: 0.45rem;
+}
+
+::-webkit-scrollbar-track{
+    background-color: var(--f-col-dark);
+}
+
+::-webkit-scrollbar-thumb{
+    background-color:rgba(255, 255, 255, 0.5);
+    border-radius: 100vw;
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color:var(--f-col-light);
+}
+
+@supports (scrollbar-color: red, blue){
+    *{
+        scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
+        scrollbar-width: thin;
+    }
 }
